--- a/Segmentation.ipynb
+++ b/Segmentation.ipynb
@@ -1,15 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Model Exploration 🔭 - Segmentation"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,6 +36,8 @@
     "from scripts.unet import UNet\n",
     "\n",
     "from pytorch_model_summary import summary\n",
+    "\n",
+    "import torch.onnx\n",
     "\n",
     "from scripts.transformers import MaskTransformer, PerspectiveTransformer, ThreasholdTransformer\n",
     "\n",
@@ -93,6 +88,32 @@
     "model.load_state_dict(torch.load(\"state_dicts/checkpoint.pth\"))\n",
     "model.eval()\n",
     "print(summary(model, torch.zeros((1, 3, 128, 128)).cuda(), show_input=False))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model Exploration 🔭 - Segmentation\n",
+    "<img src=\"assets/segmentatio.svg\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.onnx.export(model,               # model being run\n",
+    "                  torch.zeros((1, 3, 128, 128)).cuda(),                         # model input (or a tuple for multiple inputs)\n",
+    "                  \"segmentation.onnx\",   # where to save the model (can be a file or file-like object)\n",
+    "                  export_params=True,        # store the trained parameter weights inside the model file\n",
+    "                  opset_version=12,          # the ONNX version to export the model to\n",
+    "                  do_constant_folding=True,  # whether to execute constant folding for optimization\n",
+    "                  input_names = ['input'],   # the model's input names\n",
+    "                  output_names = ['output'], # the model's output names\n",
+    "                  dynamic_axes={'input' : {0 : '16'},    # variable lenght axes\n",
+    "                                'output' : {0 : '16'}})"
    ]
   },
   {
