--- a/Segmentation.ipynb
+++ b/Segmentation.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model Exploration 🔭 - Segmentation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -53,6 +60,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"assets/segmentation.svg\">"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -88,32 +102,6 @@
     "model.load_state_dict(torch.load(\"state_dicts/checkpoint.pth\"))\n",
     "model.eval()\n",
     "print(summary(model, torch.zeros((1, 3, 128, 128)).cuda(), show_input=False))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Model Exploration 🔭 - Segmentation\n",
-    "<img src=\"assets/segmentatio.svg\">"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "torch.onnx.export(model,               # model being run\n",
-    "                  torch.zeros((1, 3, 128, 128)).cuda(),                         # model input (or a tuple for multiple inputs)\n",
-    "                  \"segmentation.onnx\",   # where to save the model (can be a file or file-like object)\n",
-    "                  export_params=True,        # store the trained parameter weights inside the model file\n",
-    "                  opset_version=12,          # the ONNX version to export the model to\n",
-    "                  do_constant_folding=True,  # whether to execute constant folding for optimization\n",
-    "                  input_names = ['input'],   # the model's input names\n",
-    "                  output_names = ['output'], # the model's output names\n",
-    "                  dynamic_axes={'input' : {0 : '16'},    # variable lenght axes\n",
-    "                                'output' : {0 : '16'}})"
    ]
   },
   {
